Fixed animation on mobile - removed

--- a/src/App.css
+++ b/src/App.css
@@ -402,6 +402,10 @@ body {
   .caption-left {
     top: 60%;
   }
+
+  .image-hovered {
+    transform: none;
+  }
 }
 
 
